--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- Google Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Sansita+Swashed:wght@300..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     <!-- BootStrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
     <!-- Flickity CSS -->
@@ -19,7 +19,7 @@
     <!-- 
         Jin Byun
         A01458151
-        Web Scripting 1 Term Project
+        Web Scripting 1: Term Project
     -->
 
     <header class="site-header">
@@ -60,6 +60,11 @@
                     <img src="images/banner-3.jpg" alt="banner-3">
                 </div>
             </div>
+             <!-- Type JS -->
+             <div class="banner-typing">
+                <!-- Element to contain animated typing -->
+                <span id="letter-typing"></span>
+            </div>
         </section>
 
         <!-- About Us -->
@@ -75,7 +80,52 @@
                     <div class="about-text text-center col-12 col-lg-6 text-lg-start d-lg-flex flex-lg-column justify-content-lg-center align-items-start">
                         <h3 class="mb-3">I love the vintage charm of film photography</h3>
                         <p>I like the nostalgic vibe of film cameras, so I carry mine around pretty much all the time. It’s not perfect or fast, but that’s what I like about it. I enjoy capturing random moments from daily life—nothing fancy, just little things I want to remember.</p>
-                        <button type="button" class="btn btn-light mt-2">Learn More</button>
+                        <a href="gallery.html" class="btn btn-light mt-2">Learn More</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Behind the Frames -->
+        <section class="bts">
+            <div class="container-fluid p-5 my-6">
+                <div class="title text-center mb-4">
+                    <h1 class="fade-right">Behind the Frames</h1>
+                </div>
+                <!-- Flip Cards -->
+                <div class="cards d-flex gap-5 align-items-center justify-content-center flex-wrap">
+                    <div class="flip-card">
+                        <div class="flip-card-inner text-center">
+                            <div class="flip-card-front">
+                                <img src="images/card-1.jpg" alt="card-1">
+                            </div>
+                            <div class="flip-card-back d-flex flex-column align-items-center">
+                                <h2 class="mt-5 mb-4">Summer Mode On</h2> 
+                                <p>Summer mode is officially on. Just trying to stay cool by the fan these days.</p> 
+                            </div>
+                        </div>
+                    </div>
+                    <div class="flip-card">
+                        <div class="flip-card-inner text-center">
+                            <div class="flip-card-front">
+                                <img src="images/card-2.jpg" alt="card-2">
+                            </div>
+                            <div class="flip-card-back d-flex flex-column align-items-center">
+                                <h2 class="mt-5 mb-4">Blurry Tree</h2> 
+                                <p>A single tree stands in the wind.<br>Its shape is soft and unclear, like a fading memory or a passing dream.</p> 
+                            </div>
+                        </div>
+                    </div>
+                    <div class="flip-card">
+                        <div class="flip-card-inner text-center">
+                            <div class="flip-card-front">
+                                <img src="images/card-3.jpg" alt="card-3">
+                            </div>
+                            <div class="flip-card-back d-flex flex-column align-items-center">
+                                <h2 class="mt-5 mb-4">Crimson Night</h2> 
+                                <p>A dreamy sunset wrapped in crimson clouds, blurring day into night.</p> 
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -113,6 +163,8 @@
     <!-- GSAP JS -->
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/gsap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/ScrollTrigger.min.js"></script>
+    <!-- Type JS -->
+    <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
     <!-- Custom JS -->
     <script src="js/main.js"></script>
 
